# SCC

./: CMakeLists.txt  readme.md
as/: CMakeLists.txt
as/example/: fib.s
as/include/scc/as/: as.hpp  fragment.hpp  instruction.hpp  module.hpp  operand.hpp  parser.hpp  section.hpp  symbol.hpp  writer.hpp
as/lib/: as.cpp  immediate_operand.cpp  instruction.cpp  module.cpp  operand.cpp  parser.cpp  reference_operand.cpp  register_operand.cpp  section.cpp  symbol.cpp  symbol_operand.cpp
as/src/: main.cpp
cc/: CMakeLists.txt
cc/include/scc/cc/: cc.hpp  parser.hpp
cc/lib/: cc.cpp  parser.cpp
cc/src/: main.cpp
common/: CMakeLists.txt
common/include/scc/: assert.hpp  common.hpp  error.hpp  platform.hpp
common/lib/: common.cpp  platform.cpp
ir/: CMakeLists.txt
ir/example/: example.ir  fib.ir
ir/include/scc/ir/: argument.hpp  block.hpp  builder.hpp  constant.hpp  context.hpp  empty_value.hpp  function.hpp  global.hpp  instruction.hpp  ir.hpp  module.hpp  parser.hpp  platform.hpp  register.hpp  type.hpp  usable.hpp  user.hpp  value.hpp  variable.hpp  writer.hpp
ir/lib/: alloc_instruction.cpp  argument.cpp  array_type.cpp  block.cpp  branch_instruction.cpp  builder.cpp  call_instruction.cpp  cast_instruction.cpp  comparator_instruction.cpp  constant.cpp  constant_array.cpp  constant_float.cpp  constant_int.cpp  constant_struct.cpp  constant_vector.cpp  context.cpp  direct_branch_instruction.cpp  element_pointer_instruction.cpp  empty_value.cpp  float_type.cpp  function.cpp  function_type.cpp  global.cpp  instruction.cpp  int_type.cpp  ir.cpp  load_instruction.cpp  module.cpp  offset_instruction.cpp  operator_instruction.cpp  parser.cpp  pointer_type.cpp  register.cpp  return_instruction.cpp  select_instruction.cpp  store_instruction.cpp  struct_type.cpp  type.cpp  usable.cpp  user.cpp  (+4 more)
ir/lib/instruction/: alloc_instruction.cpp  branch_instruction.cpp  call_instruction.cpp  cast_instruction.cpp  comparator_instruction.cpp  instruction.cpp  load_instruction.cpp  offset_instruction.cpp  operator_instruction.cpp  return_instruction.cpp  select_instruction.cpp  store_instruction.cpp
ir/lib/src/: ir.cpp
ir/lib/type/: array_type.cpp  float_type.cpp  function_type.cpp  int_type.cpp  pointer_type.cpp  struct_type.cpp  type.cpp  vector_type.cpp  void_type.cpp
ir/lib/value/: argument.cpp  constant.cpp  constant_array.cpp  constant_float.cpp  constant_int.cpp  constant_struct.cpp  constant_vector.cpp  function.cpp  global.cpp  identified_value.cpp  named_value.cpp  value.cpp  variable.cpp
ir/src/: main.cpp
ld/: CMakeLists.txt
ld/include/scc/ld/: parser.hpp
ld/lib/: ld.cpp
ld/lib/src/: ld.cpp
ld/src/: main.cpp
